[ci] Fix all error prone issues